update DOM.create method and fix bugs

--- a/.jshintrc
+++ b/.jshintrc
@@ -6,6 +6,8 @@
     "expr": true,
 	"globals": {
 		"define": true,
-		"CustomEvent": true
+		"CustomEvent": true,
+        "Element": true,
+        "NodeList": true
 	}
 }
