--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "grunt-contrib-watch": "0.3.1",
         "grunt-jsdoc": "0.3.2",
         "grunt-contrib-jshint": "0.4.3",
-        "grunt-karma": "0.4.4"
+        "grunt-karma": "0.4.4",
+        "grunt-build-gh-pages": "0.0.1"
     }
 }
