--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
         "grunt-contrib-uglify": "0.2.0",
         "grunt-contrib-copy": "0.4.1",
         "grunt-contrib-clean": "0.4.1"
+    },
+    "scripts": {
+        "test": "grunt travis"
     }
 }
