add "quotmark": "double" option into .jshintrc

--- a/.jshintrc
+++ b/.jshintrc
@@ -3,6 +3,7 @@
     "boss": true,
     "newcap": false,
     "evil": true,
+    "quotmark": "double",
     "globals": { 
         "Element": true
     }
