--- a/.jshintrc
+++ b/.jshintrc
@@ -7,6 +7,7 @@
     "indent": 4,
     "eqeqeq": true,
     "strict": true,
+    "undef": true,
     "globals": {
         "DOM": true,
         "Element": true,
@@ -16,6 +17,9 @@
         "it": true,
         "expect": true,
         "setFixtures": true,
-        "jasmine": true
+        "jasmine": true,
+        "waits": true,
+        "runs": true,
+        "spyOn": true
     }
 }
