add publish task and remove grunt-build-gh-pages

--- a/.jshintrc
+++ b/.jshintrc
@@ -20,6 +20,9 @@
         "jasmine": true,
         "waits": true,
         "runs": true,
-        "spyOn": true
+        "spyOn": true,
+
+        "module": true,
+        "require": true
     }
 }
