--- a/.jshintrc
+++ b/.jshintrc
@@ -14,6 +14,7 @@
         "Element": true,
 
         "beforeEach": true,
+        "afterEach": true,
         "describe": true,
         "it": true,
         "expect": true,
