--- a/bower.json
+++ b/bower.json
@@ -8,5 +8,10 @@
     "ignore": [
         "*.*",
         "test"
-    ]
+    ],
+    "devDependencies": {
+        "jquery": "1.9.1",
+        "google-code-prettify": "1.0.0",
+        "jasmine": "1.3.1"
+    }
 }
