--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "devDependencies": {
         "jquery": "1.9.1",
         "google-code-prettify": "1.0.0",
-        "jasmine": "1.3.1"
+        "jasmine": "1.3.1",
+        "d3": "2.7.0"
     }
 }
