--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "author": "Maksim Chemerisuk",
     "description": "Modern javascript library for working with DOM",
     "license": "MIT",
-    "respository": {
+    "repository": {
         "type": "git",
         "url": "https://github.com/chemerisuk/better-dom"
     },
@@ -20,6 +20,7 @@
         "grunt-contrib-uglify": "0.2.0",
         "grunt-contrib-copy": "0.4.1",
         "grunt-contrib-clean": "0.4.1",
+        "grunt-contrib-concat": "0.3.0",
         "platform": "1.0.0",
         "benchmark": "1.0.0"
     },
