--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "grunt-contrib-copy": "0.4.1",
         "grunt-contrib-clean": "0.4.1",
         "grunt-contrib-concat": "0.3.0",
+        "grunt-contrib-connect": "0.3.0",
         "platform": "1.0.0",
         "benchmark": "1.0.0"
     },
