improve test coverage

--- a/.jshintrc
+++ b/.jshintrc
@@ -20,6 +20,7 @@
     "globals": {
         "DOM": true,
         "Element": true,
+        "_": true,
 
         "beforeEach": true,
         "afterEach": true,
