--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
         "jquery": "1.9.1",
         "google-code-prettify": "1.0.0",
         "jasmine": "1.3.1",
-        "d3": "2.7.0"
+        "d3": "2.7.0",
+        "lodash": "~1.2.1",
     }
 }
