--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "grunt-contrib-concat": "0.3.0",
         "grunt-contrib-connect": "0.3.0",
         "platform": "1.0.0",
-        "benchmark": "1.0.0"
+        "benchmark": "1.0.0",
+        "lodash": "1.2.1"
     },
     "scripts": {
         "test": "grunt travis"
