--- a/.jshintrc
+++ b/.jshintrc
@@ -11,7 +11,6 @@
     "eqeqeq": true,
     "strict": true,
     "undef": true,
-    "unused": true,
     "noarg": true,
     "noempty": true,
     "trailing": true,
@@ -21,6 +20,7 @@
         "DOM": true,
         "Element": true,
         "_": true,
+        "define": true,
 
         "beforeEach": true,
         "afterEach": true,
