--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {},
     "devDependencies": {
         "grunt": "0.4.1",
+
         "grunt-contrib-watch": "0.4.3",
         "grunt-jsdoc": "0.3.3",
         "grunt-contrib-jshint": "0.5.4",
@@ -22,6 +23,8 @@
         "grunt-contrib-clean": "0.4.1",
         "grunt-contrib-concat": "0.3.0",
         "grunt-contrib-connect": "0.3.0",
+        "grunt-contrib-requirejs": "0.4.1",
+
         "platform": "1.0.0",
         "benchmark": "1.0.0",
         "lodash": "1.2.1"
