--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     ],
     "dependencies": {},
     "devDependencies": {
+        "lodash": "1.2.1",
         "jquery": "1.10.0",
         "google-code-prettify": "1.0.0",
         "jasmine": "1.3.1",
