--- a/bower.json
+++ b/bower.json
@@ -13,9 +13,8 @@
     "dependencies": {},
     "devDependencies": {
         "lodash": "1.2.1",
-        "jquery": "1.10.0",
+        "jquery": "2.0.2",
         "google-code-prettify": "1.0.0",
-        "jasmine": "1.3.1",
-        "d3": "2.7.0"
+        "jasmine": "1.3.1"
     }
 }
