all speed tests work

--- a/test/lib/karma.speed.conf
+++ b/test/lib/karma.speed.conf
@@ -2,6 +2,8 @@ basePath = "../..";
 
 browsers = ["Chrome"];
 
+logLevel = LOG_DISABLE;
+
 files = [
     "node_modules/benchmark/benchmark.js",
     "test/lib/benchmine/benchmine-env.js",
