--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "grunt-contrib-jshint": "0.5.4",
         "grunt-karma": "0.4.4",
         "grunt-shell": "0.2.2",
+        "grunt-plato": "0.2.0",
         "grunt-contrib-uglify": "0.2.1",
         "grunt-contrib-copy": "0.4.1",
         "grunt-contrib-clean": "0.4.1",
