--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "better-dom",
-    "version": "1.0.0-beta.1",
+    "version": "1.0.0-rc.1",
     "main": [
         "better-dom.js",
         "better-dom.htc"
