--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "title": "better-dom",
     "version": "1.0.0-rc.2",
     "author": "Maksim Chemerisuk",
-    "description": "Making DOM to be nice",
+    "description": "Sandbox for DOM extensions",
     "license": "MIT",
     "repository": {
         "type": "git",
