update Element.on params order

--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "ignore": [
         ".*",
         "test",
-        "src"
+        "src",
+        "extra"
     ],
     "dependencies": {},
     "devDependencies": {
