update bower.json and readme

--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
         "better-dom.htc"
     ],
     "ignore": [
-        ".*",
+        ".gitignore",
+        ".travis.yml",
         "test",
         "src",
         "extra"
