use jasmine task for testing

--- a/test/lib/karma.conf
+++ b/test/lib/karma.conf
@@ -2,7 +2,7 @@ basePath = "../..";
 
 frameworks = ["jasmine"];
 
-browsers = ["PhantomJS"];
+browsers = ["PhantomJS", "Chrome", "Opera", "Safari", "Firefox"];
 
 files = [
     JASMINE,
@@ -12,3 +12,5 @@ files = [
     "build/*.js",
     "test/spec/*.spec.js"
 ];
+
+singleRun = true;
