--- a/bower.json
+++ b/bower.json
@@ -13,9 +13,6 @@
     ],
     "dependencies": {},
     "devDependencies": {
-        "lodash": "1.2.1",
-        "jquery": "2.0.2",
-        "google-code-prettify": "1.0.0",
-        "jasmine": "1.3.1"
+        "jquery": "2.0.2"
     }
 }
