--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
         "grunt-contrib-clean": "0.4.1",
         "grunt-contrib-connect": "0.3.0",
         "grunt-contrib-requirejs": "0.4.1",
+        "grunt-contrib-jasmine": "0.5.1",
+        "grunt-template-jasmine-istanbul": "0.2.4",
         "platform": "1.0.0",
         "benchmark": "1.0.0",
         "lodash": "1.2.1"
     },
     "scripts": {
-        "test": "grunt travis"
+        "test": "grunt test"
     }
 }
