--- a/test/lib/karma.speed.conf
+++ b/test/lib/karma.speed.conf
@@ -10,7 +10,7 @@ files = [
     "test/lib/karma-benchmine-adapter.js",
     "test/lib/benchmine/benchmine-report-karma.js",
     "components/jquery/jquery.js",
-    "build/better-dom.js",
+    "build/*.js",
     "test/speed/*.suite.js"
 ];
 
