--- a/package.json
+++ b/package.json
@@ -9,16 +9,12 @@
         "type": "git",
         "url": "https://github.com/chemerisuk/better-dom"
     },
-    "docs": "http://chemerisuk.github.io/better-dom/",
+    "docs": "http://chemerisuk.github.io/better-dom",
     "dependencies": {},
     "devDependencies": {
         "grunt": "0.4.1",
         "grunt-contrib-watch": "0.4.3",
-        "grunt-jsdoc": "0.3.3",
         "grunt-contrib-jshint": "0.5.4",
-        "grunt-karma": "0.4.4",
-        "grunt-shell": "0.2.2",
-        "grunt-plato": "0.2.0",
         "grunt-contrib-uglify": "0.2.1",
         "grunt-contrib-copy": "0.4.1",
         "grunt-contrib-clean": "0.4.1",
@@ -26,9 +22,14 @@
         "grunt-contrib-requirejs": "0.4.1",
         "grunt-contrib-jasmine": "0.5.1",
         "grunt-template-jasmine-istanbul": "0.2.4",
+        "grunt-jsdoc": "0.3.3",
+        "grunt-karma": "0.4.4",
+        "grunt-shell": "0.2.2",
+        "grunt-plato": "0.2.0",
         "platform": "1.0.0",
         "benchmark": "1.0.0",
-        "lodash": "1.2.1"
+        "lodash": "1.2.1",
+        "matchdep": "0.1.2"
     },
     "scripts": {
         "test": "grunt test"
