--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
         "grunt-plato": "0.2.0",
         "platform": "1.0.0",
         "benchmark": "1.0.0",
-        "lodash": "1.2.1",
-        "matchdep": "0.1.2"
+        "lodash": "1.2.1"
     },
     "scripts": {
         "test": "grunt test"
