--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "better-dom",
     "version": "1.1.0",
     "author": "Maksim Chemerisuk",
-    "description": "Sandbox for DOM extensions",
+    "description": "Sandbox for living DOM extensions",
     "license": "MIT",
     "repository": {
         "type": "git",
