--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     ],
     "dependencies": {},
     "devDependencies": {
-        "jquery": "2.0.2"
+        "jquery": "2.0.2",
+        "html5shiv": "3.6.2"
     }
 }
