use forked version of html5shiv + add print css fix into the htc file

--- a/bower.json
+++ b/bower.json
@@ -12,9 +12,9 @@
         "extra"
     ],
     "dependencies": {
-        "html5shiv": "3.6.2"
+        "html5shiv": "git://github.com/chemerisuk/html5shiv.git#66f129de67994a787380850a4b741e885dfa61b9"
     },
     "devDependencies": {
-        "jquery": "2.0.2"
+        "jquery": "latest"
     }
 }
