--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
         "grunt-contrib-requirejs": "0.4.1",
         "grunt-contrib-jasmine": "0.5.1",
         "grunt-template-jasmine-istanbul": "0.2.4",
-        "grunt-jsdoc": "0.3.3",
-        "grunt-karma": "0.4.4",
-        "grunt-shell": "0.2.2",
+        "grunt-jsdoc": "0.4.0",
+        "grunt-karma": "0.7.0",
+        "karma-firefox-launcher": "0.1.0",
+        "karma-safari-launcher": "0.1.0",
+        "karma-opera-launcher": "0.1.0",
+        "grunt-shell": "0.3.1",
         "platform": "1.0.0",
         "benchmark": "1.0.0",
         "lodash": "1.2.1"
