--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
         "grunt-contrib-clean": "0.4.1",
         "grunt-contrib-connect": "0.3.0",
         "grunt-contrib-requirejs": "0.4.1",
-        "grunt-jsdoc": "0.4.0",
         "grunt-shell": "0.3.1",
         "platform": "1.0.0",
         "benchmark": "1.0.0",
         "lodash": "1.2.1",
+
+        "grunt-jsdoc": "0.4.0",
+        "ink-docstrap": "~0.2",
+
         "grunt-karma": "0.7.0",
         "karma-coverage": "0.1.0",
         "karma-firefox-launcher": "0.1.0",
