--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,6 @@
     },
     "devDependencies": {
         "jquery": "latest",
-        "jasmine": "~1.3.1",
-        "lodash": "~2.1.0"
+        "jasmine": "~1.3.1"
     }
 }
