--- a/bower.json
+++ b/bower.json
@@ -2,8 +2,8 @@
     "name": "better-dom",
     "version": "1.5.0",
     "main": [
-        "better-dom.js",
-        "better-dom.htc"
+        "dist/better-dom.js",
+        "dist/better-dom.htc"
     ],
     "ignore": [
         ".*",
