use waitsFor in async tests to avoid IE execution bugs

--- a/.jshintrc
+++ b/.jshintrc
@@ -37,6 +37,7 @@
         "waits": true,
         "runs": true,
         "spyOn": true,
+        "waitsFor": true,
 
         "module": true,
         "require": true,
