--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "better-dom",
-    "version": "1.5.5",
+    "version": "1.6.0-rc.1",
     "main": [
         "dist/better-dom.js",
         "dist/better-dom.htc"
