--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "better-dom",
-    "version": "1.6.0-rc.9",
+    "version": "1.6.0",
     "author": "Maksim Chemerisuk",
     "description": "Live extension playground",
     "license": "MIT",
