--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
     "version": "1.6.0",
     "main": [
         "dist/better-dom.js",
-        "dist/better-dom.htc"
+        "dist/better-dom-legacy.js",
+        "dist/better-dom-legacy.htc"
     ],
     "ignore": [
         ".*",
@@ -11,11 +12,10 @@
         "src",
         "extra"
     ],
-    "dependencies": {
-        "html5shiv": "3.6.2"
-    },
     "devDependencies": {
         "jquery": "latest",
-        "jasmine": "~1.3.1"
+        "jasmine": "~1.3.1",
+        "html5shiv": "3.6.2",
+        "es5-shim": "2.1.0"
     }
 }
