fix minor issues in Gruntfile.js and bower.json

--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
         ".*",
         "test",
         "src",
-        "extra"
+        "extra",
+        "legacy"
     ],
     "devDependencies": {
         "jquery": "latest",
