--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "better-dom",
-  "version": "1.7.0-beta.1",
+  "version": "1.7.0-rc.1",
   "main": [
     "dist/better-dom.js",
     "dist/better-dom-legacy.js",
