--- a/package.json
+++ b/package.json
@@ -4,34 +4,36 @@
   "author": "Maksim Chemerisuk",
   "description": "Live extension playground",
   "license": "MIT",
+  "main": "dist/better-dom.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/chemerisuk/better-dom"
   },
   "docs": "http://chemerisuk.github.io/better-dom",
-  "dependencies": {},
   "devDependencies": {
-    "grunt": "0.4.1",
-    "grunt-contrib-watch": "0.4.3",
-    "grunt-contrib-jshint": "0.5.4",
-    "grunt-contrib-uglify": "0.2.1",
-    "grunt-contrib-copy": "0.4.1",
-    "grunt-contrib-clean": "0.4.1",
+    "grunt": "~0.4.2",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-jshint": "~0.8.0",
+    "grunt-contrib-uglify": "~0.3.2",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-connect": "0.3.0",
     "grunt-shell": "0.3.1",
+    "grunt-browserify": "~1.3.0",
     "platform": "1.0.0",
     "benchmark": "1.0.0",
     "lodash": "1.2.1",
-    "grunt-jsdoc": "0.4.0",
-    "ink-docstrap": "~0.2",
-    "grunt-karma": "0.7.0",
-    "karma-coverage": "0.1.0",
+    "grunt-jsdoc": "~0.5.0",
+    "ink-docstrap": "~0.3.0",
+    "grunt-karma": "0.7.1",
+    "karma-coverage": "~0.1",
     "karma-firefox-launcher": "0.1.0",
     "karma-safari-launcher": "0.1.1",
-    "karma-opera-launcher": "0.1.0",
-    "grunt-browserify": "~1.2.1"
+    "karma-opera-launcher": "0.1.0"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "start": "grunt dev",
+    "build": "npm install && bower install && grunt"
   }
 }
