--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "better-dom",
-  "version": "1.7.0-rc.3",
+  "version": "1.7.0",
   "main": [
     "dist/better-dom.js",
     "dist/better-dom-legacy.js",
