--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "grunt-jsdoc": "~0.5.0",
     "ink-docstrap": "~0.3.0",
     "grunt-karma": "0.7.1",
+    "karma-jasmine": "~0.2.1",
     "karma-coverage": "~0.1",
     "karma-firefox-launcher": "0.1.0",
     "karma-safari-launcher": "0.1.1",
