fix ussue #14 with RequireJS + other minor changes

--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "legacy",
     "Gruntfile.js",
     "package.json",
-    "bower.json"
+    "bower.json",
+    "main.sublime-project"
   ],
   "devDependencies": {
     "jquery": "latest",
