--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "scripts": {
     "test": "grunt test",
-    "coveralls": "cat ./coverage/*.json | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
+    "coveralls": "cat ./coverage/PhantomJS*/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "start": "grunt dev",
     "build": "npm install && bower install && grunt"
   }
