--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "lodash": "1.2.1",
     "grunt-jsdoc": "~0.5.0",
     "ink-docstrap": "~0.3.0",
-    "grunt-karma": "0.7.1",
+    "grunt-karma": "0.8.2",
+    "karma": "0.12.0",
     "karma-jasmine": "~0.2.1",
-    "karma-coverage": "~0.1",
-    "karma-firefox-launcher": "0.1.0",
-    "karma-safari-launcher": "0.1.1",
-    "karma-opera-launcher": "0.1.0",
+    "karma-coverage": "^0.1",
+    "karma-phantomjs-launcher": "^0.1",
+    "karma-chrome-launcher": "^0.1",
+    "karma-firefox-launcher": "^0.1",
+    "karma-safari-launcher": "^0.1",
+    "karma-opera-launcher": "^0.1",
     "coveralls": "^2.8.0"
   },
   "scripts": {
