--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "docs": "http://chemerisuk.github.io/better-dom",
   "devDependencies": {
     "grunt": "~0.4.2",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-jshint": "~0.8.0",
-    "grunt-contrib-uglify": "~0.3.2",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-connect": "0.3.0",
-    "grunt-shell": "0.3.1",
-    "grunt-browserify": "~1.3.0",
+    "grunt-contrib-watch": "^0.5",
+    "grunt-contrib-jshint": "^0.8",
+    "grunt-contrib-uglify": "^0.3",
+    "grunt-contrib-clean": "^0.5",
+    "grunt-contrib-connect": "^0.3",
+    "grunt-shell": "^0.6",
+    "grunt-browserify": "^2.0",
     "platform": "1.0.0",
     "benchmark": "1.0.0",
     "lodash": "1.2.1",
@@ -25,19 +25,19 @@
     "ink-docstrap": "~0.3.0",
     "grunt-karma": "0.8.2",
     "karma": "0.12.0",
-    "karma-jasmine": "~0.2.1",
+    "karma-jasmine": "^0.2",
     "karma-coverage": "^0.1",
     "karma-phantomjs-launcher": "^0.1",
     "karma-chrome-launcher": "^0.1",
     "karma-firefox-launcher": "^0.1",
     "karma-safari-launcher": "^0.1",
     "karma-opera-launcher": "^0.1",
-    "coveralls": "^2.8.0"
+    "watchify": "^0.6.3"
   },
   "scripts": {
     "test": "grunt test",
-    "coveralls": "cat ./coverage/PhantomJS*/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "start": "grunt dev",
-    "build": "npm install && bower install && grunt"
+    "build": "npm install && bower install && grunt",
+    "coveralls": "cat ./coverage/PhantomJS*/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   }
 }
