--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "grunt-jsdoc": "~0.5.0",
     "ink-docstrap": "~0.3.0",
     "grunt-karma": "0.8.2",
-    "karma": "0.12.0",
+    "karma": "~0.12",
     "karma-jasmine": "^0.2",
     "karma-coverage": "^0.1",
     "karma-phantomjs-launcher": "^0.1",
