--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "docs": "http://chemerisuk.github.io/better-dom",
   "devDependencies": {
-    "grunt": "~0.4.2",
+    "grunt": "^0.4",
     "grunt-contrib-watch": "^0.5",
     "grunt-contrib-jshint": "^0.8",
     "grunt-contrib-uglify": "^0.3",
@@ -33,13 +33,13 @@
     "karma-safari-launcher": "^0.1",
     "karma-opera-launcher": "^0.1",
     "es6-browserify": "^0.0.7",
-    "browserify-es6-modules": "^0.1.1"
+    "browserify-es6-modules": "^0.1.1",
+    "coveralls": "^2.10.0"
   },
   "scripts": {
     "test": "grunt test",
     "start": "grunt dev",
     "install": "grunt build",
-    "build": "npm install && bower install && grunt",
     "coveralls": "cat ./coverage/PhantomJS*/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   }
 }
