--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "docs": "http://chemerisuk.github.io/better-dom",
   "devDependencies": {
-    "grunt": "^0.4",
-    "grunt-contrib-watch": "^0.5",
-    "grunt-contrib-jshint": "^0.8",
-    "grunt-contrib-uglify": "^0.3",
-    "grunt-contrib-clean": "^0.5",
-    "grunt-contrib-connect": "^0.3",
-    "grunt-shell": "^0.6",
+    "grunt": "^0.4.3",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-jshint": "^0.9.2",
+    "grunt-contrib-uglify": "^0.4.0",
+    "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-connect": "^0.7.1",
+    "grunt-shell": "^0.6.4",
     "grunt-browserify": "^2.0",
     "platform": "1.0.0",
     "benchmark": "1.0.0",
@@ -24,14 +24,14 @@
     "grunt-jsdoc": "~0.5.0",
     "ink-docstrap": "~0.3.0",
     "grunt-karma": "0.8.2",
-    "karma": "~0.12",
-    "karma-jasmine": "^0.2",
-    "karma-coverage": "^0.1",
-    "karma-phantomjs-launcher": "^0.1",
-    "karma-chrome-launcher": "^0.1",
-    "karma-firefox-launcher": "^0.1",
-    "karma-safari-launcher": "^0.1",
-    "karma-opera-launcher": "^0.1",
+    "karma": "^0.12.0",
+    "karma-jasmine": "^0.2.0",
+    "karma-coverage": "^0.1.0",
+    "karma-phantomjs-launcher": "^0.1.0",
+    "karma-chrome-launcher": "^0.1.0",
+    "karma-firefox-launcher": "^0.1.0",
+    "karma-safari-launcher": "^0.1.0",
+    "karma-opera-launcher": "^0.1.0",
     "es6-browserify": "^0.0.7",
     "browserify-es6-modules": "^0.1.1",
     "coveralls": "^2.10.0"
