--- a/package.json
+++ b/package.json
@@ -10,31 +10,30 @@
   },
   "docs": "http://chemerisuk.github.io/better-dom",
   "devDependencies": {
+    "benchmark": "1.0.0",
+    "coveralls": "^2.10.0",
+    "es6-module-transpiler": "^0.6.0",
+    "es6-transpiler": "^0.7.14-2",
     "grunt": "^0.4.3",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-connect": "^0.7.1",
-    "grunt-shell": "^0.6.4",
-    "grunt-browserify": "^2.0",
-    "platform": "1.0.0",
-    "benchmark": "1.0.0",
-    "lodash": "1.2.1",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-uglify": "^0.4.0",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-jsdoc": "~0.5.0",
-    "ink-docstrap": "~0.3.0",
     "grunt-karma": "0.8.3",
+    "grunt-shell": "^0.6.4",
+    "ink-docstrap": "~0.3.0",
     "karma": "^0.12.0",
-    "karma-jasmine": "^0.2.0",
-    "karma-coverage": "^0.1.0",
-    "karma-phantomjs-launcher": "^0.1.0",
     "karma-chrome-launcher": "^0.1.0",
+    "karma-coverage": "^0.1.0",
     "karma-firefox-launcher": "^0.1.0",
-    "karma-safari-launcher": "^0.1.0",
+    "karma-jasmine": "^0.2.0",
     "karma-opera-launcher": "^0.1.0",
-    "es6-browserify": "^0.0.7",
-    "browserify-es6-modules": "^0.1.1",
-    "coveralls": "^2.10.0"
+    "karma-phantomjs-launcher": "^0.1.0",
+    "karma-safari-launcher": "^0.1.0",
+    "lodash": "1.2.1",
+    "platform": "1.0.0"
   },
   "scripts": {
     "test": "grunt test",
