--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "grunt-jsdoc": "~0.5.0",
     "grunt-karma": "0.8.3",
     "grunt-shell": "^0.6.4",
-    "ink-docstrap": "~0.3.0",
+    "jaguarjs-jsdoc": "git://github.com/davidshimjs/jaguarjs-jsdoc.git",
     "karma": "^0.12.0",
     "karma-chrome-launcher": "^0.1.0",
     "karma-coverage": "^0.1.0",
