--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "better-dom",
-  "version": "1.7.7",
+  "version": "2.0.0-beta.1",
   "main": [
     "dist/better-dom.js",
     "dist/better-dom-legacy.js",
