--- a/.jshintrc
+++ b/.jshintrc
@@ -10,7 +10,7 @@
     "quotmark": "double",
     "indent": 4,
     "eqeqeq": true,
-    "undef": true,
+    "undef": false,
     "noarg": true,
     "noempty": true,
     "trailing": true,
