--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "better-dom",
-  "version": "2.0.0-beta.3",
+  "version": "2.0.0-rc.1",
   "main": [
     "dist/better-dom.js",
     "dist/better-dom.htc"
