use different arguments order in $Element#on + refactoring

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "scripts": {
     "test": "grunt test",
-    "start": "grunt dev"
+    "start": "grunt dev",
+    "install": "grunt build"
   }
 }
