--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-connect": "^0.7.1",
     "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-symlink": "^0.3.0",
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-jsdoc": "~0.5.0",
@@ -28,6 +29,7 @@
     "karma-coverage": "^0.1.0",
     "karma-coveralls": "^0.1.4",
     "karma-firefox-launcher": "^0.1.0",
+    "karma-ievms": "0.0.4",
     "karma-jasmine": "^0.2.0",
     "karma-opera-launcher": "^0.1.0",
     "karma-phantomjs-launcher": "^0.1.0",
