--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,11 @@ node_js:
   - 0.10
 before_install:
   - npm install -g grunt-cli
+  - npm install -g bower
+  - bower install
 script:
   - grunt travis
-after_script:
+after_success:
   - codeclimate < coverage/**/lcov.info
 env:
   global:
