don't fail if sauce test fails

--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
   },
   "scripts": {
     "test": "grunt test",
-    "start": "grunt dev",
-    "install": "grunt build"
+    "start": "grunt dev"
   }
 }
