--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-jsdoc": "~0.5.0",
-    "grunt-karma": "0.9.0",
+    "grunt-karma": "~0.9.0",
     "grunt-shell": "^0.6.4",
     "jaguarjs-jsdoc": "git://github.com/davidshimjs/jaguarjs-jsdoc.git",
     "karma": "^0.12.0",
