--- a/package.json
+++ b/package.json
@@ -23,7 +23,14 @@
     "grunt-jsdoc": "~0.5.0",
     "grunt-karma": "~0.9.0",
     "grunt-shell": "^0.6.4",
+    "gulp": "^3.8.8",
+    "gulp-es6-transpiler": "^1.0.0",
+    "gulp-jshint": "^1.8.5",
+    "gulp-symlink": "^1.1.0",
+    "gulp-template": "^1.1.0",
+    "gulp-util": "^3.0.1",
     "jaguarjs-jsdoc": "git://github.com/davidshimjs/jaguarjs-jsdoc.git",
+    "jshint-stylish": "^1.0.0",
     "karma": "^0.12.0",
     "karma-chrome-launcher": "^0.1.0",
     "karma-coverage": "^0.1.0",
@@ -36,10 +43,11 @@
     "karma-safari-launcher": "^0.1.0",
     "karma-sauce-launcher": "^0.2.10",
     "lodash": "1.2.1",
-    "platform": "1.0.0"
+    "platform": "1.0.0",
+    "through": "^2.3.6"
   },
   "scripts": {
     "test": "grunt test",
-    "start": "grunt dev"
+    "start": "gulp dev"
   }
 }
