--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "karma-sauce-launcher": "^0.2.10",
     "lodash": "1.2.1",
     "platform": "1.0.0",
-    "through": "^2.3.6"
+    "through": "^2.3.6",
+    "yargs": "^1.3.1"
   },
   "scripts": {
     "test": "grunt test",
