--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "grunt-karma": "~0.9.0",
     "grunt-shell": "^0.6.4",
     "gulp": "^3.8.8",
+    "gulp-clean": "^0.3.1",
     "gulp-es6-transpiler": "^1.0.0",
+    "gulp-jsdoc": "^0.1.4",
     "gulp-jshint": "^1.8.5",
     "gulp-symlink": "^1.1.0",
     "gulp-template": "^1.1.0",
