--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
     "grunt-karma": "~0.9.0",
     "grunt-shell": "^0.6.4",
     "gulp": "^3.8.8",
+    "gulp-bump": "^0.1.11",
     "gulp-clean": "^0.3.1",
     "gulp-es6-transpiler": "^1.0.0",
+    "gulp-gh-pages": "^0.3.4",
     "gulp-jsdoc": "^0.1.4",
     "gulp-jshint": "^1.8.5",
+    "gulp-replace": "^0.4.0",
     "gulp-symlink": "^1.1.0",
     "gulp-template": "^1.1.0",
+    "gulp-uglifyjs": "^0.4.3",
     "gulp-util": "^3.0.1",
     "jaguarjs-jsdoc": "git://github.com/davidshimjs/jaguarjs-jsdoc.git",
     "jshint-stylish": "^1.0.0",
