--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "gulp-bump": "^0.1.11",
     "gulp-clean": "^0.3.1",
     "gulp-es6-transpiler": "^1.0.0",
+    "gulp-filter": "^1.0.2",
     "gulp-gh-pages": "^0.3.4",
+    "gulp-git": "^0.5.1",
     "gulp-jsdoc": "^0.1.4",
     "gulp-jshint": "^1.8.5",
     "gulp-replace": "^0.4.0",
     "gulp-symlink": "^1.1.0",
+    "gulp-tag-version": "^1.1.0",
     "gulp-template": "^1.1.0",
     "gulp-uglifyjs": "^0.4.3",
     "gulp-util": "^3.0.1",
