--- a/package.json
+++ b/package.json
@@ -13,16 +13,6 @@
     "benchmark": "1.0.0",
     "es6-module-transpiler": "^0.6.0",
     "es6-transpiler": "^0.7.14-2",
-    "grunt": "^0.4.3",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-connect": "^0.7.1",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-symlink": "^0.3.0",
-    "grunt-contrib-uglify": "^0.4.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-jsdoc": "~0.5.0",
-    "grunt-karma": "~0.9.0",
-    "grunt-shell": "^0.6.4",
     "gulp": "^3.8.8",
     "gulp-bump": "^0.1.11",
     "gulp-clean": "^0.3.1",
@@ -57,7 +47,7 @@
     "yargs": "^1.3.1"
   },
   "scripts": {
-    "test": "grunt test",
+    "test": "gulp test",
     "start": "gulp dev"
   }
 }
