--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "version": "2.0.0-rc.7",
   "main": [
     "dist/better-dom.js",
-    "dist/better-dom.htc"
+    "dist/better-dom-legacy.js",
+    "dist/better-dom-legacy.htc"
   ],
   "ignore": [
     ".*",
