--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp": "^3.8.8",
     "gulp-bump": "^0.1.11",
     "gulp-clean": "^0.3.1",
+    "gulp-concat": "^2.4.1",
     "gulp-es6-transpiler": "^1.0.0",
     "gulp-filter": "^1.0.2",
     "gulp-gh-pages": "^0.3.4",
