--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "docs": "http://chemerisuk.github.io/better-dom",
   "devDependencies": {
     "benchmark": "1.0.0",
+    "es6-shim": "0.20.4",
     "es6-module-transpiler": "^0.6.0",
-    "es6-transpiler": "^0.7.14-2",
     "gulp": "^3.8.8",
     "gulp-bump": "^0.1.11",
     "gulp-clean": "^0.3.1",
@@ -51,6 +51,7 @@
   },
   "scripts": {
     "test": "gulp test",
-    "start": "gulp dev"
+    "start": "gulp dev",
+    "install": "rm -rf node_modules/gulp-es6-transpiler/node_modules/es6-transpiler/node_modules/es6-shim"
   }
 }
