--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "docs": "http://chemerisuk.github.io/better-dom",
   "devDependencies": {
     "benchmark": "1.0.0",
-    "es6-shim": "0.20.4",
     "es6-module-transpiler": "^0.6.0",
+    "es6-shim": "0.20.4",
     "gulp": "^3.8.8",
     "gulp-bump": "^0.1.11",
     "gulp-clean": "^0.3.1",
@@ -21,6 +21,7 @@
     "gulp-filter": "^1.0.2",
     "gulp-gh-pages": "^0.3.4",
     "gulp-git": "^0.5.1",
+    "gulp-header": "^1.2.2",
     "gulp-if": "^1.2.5",
     "gulp-jsdoc": "^0.1.4",
     "gulp-jshint": "^1.8.5",
