use gulp-uglify + gulp-rename

--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "gulp-jsdoc": "^0.1.4",
     "gulp-jshint": "^1.8.5",
     "gulp-plumber": "^0.6.6",
+    "gulp-rename": "^1.2.0",
     "gulp-replace": "^0.4.0",
     "gulp-symlink": "^1.1.0",
     "gulp-tag-version": "^1.1.0",
     "gulp-template": "^1.1.0",
-    "gulp-uglifyjs": "^0.4.3",
+    "gulp-uglify": "^1.0.2",
     "gulp-util": "^3.0.1",
     "jaguarjs-jsdoc": "git://github.com/chemerisuk/jaguarjs-jsdoc.git",
     "jshint-stylish": "^1.0.0",
