--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "better-dom",
-  "version": "2.1.0-rc.1",
+  "version": "2.1.0",
   "author": "Maksim Chemerisuk",
   "description": "Live extension playground",
   "license": "MIT",
