--- a/package.json
+++ b/package.json
@@ -33,17 +33,18 @@
     "gulp-uglify": "^1.0.2",
     "gulp-util": "^3.0.1",
     "jaguarjs-jsdoc": "git://github.com/chemerisuk/jaguarjs-jsdoc.git",
+    "jasmine-core": "^2.3.4",
     "jshint-stylish": "^1.0.0",
-    "karma": "^0.12.0",
-    "karma-chrome-launcher": "^0.1.0",
-    "karma-coverage": "^0.2.6",
-    "karma-coveralls": "^0.1.4",
-    "karma-firefox-launcher": "^0.1.0",
-    "karma-ievms": "0.0.4",
-    "karma-jasmine": "^0.2.0",
+    "karma": "^0.13.10",
+    "karma-chrome-launcher": "^0.2.1",
+    "karma-coverage": "^0.5.2",
+    "karma-coveralls": "^1.1.2",
+    "karma-firefox-launcher": "^0.1.6",
+    "karma-ievms": "0.1.0",
+    "karma-jasmine": "^0.3.0",
     "karma-opera-launcher": "^0.1.0",
-    "karma-phantomjs-launcher": "^0.1.0",
-    "karma-safari-launcher": "^0.1.0",
+    "karma-phantomjs2-launcher": "^0.3.2",
+    "karma-safari-launcher": "^0.1.1",
     "karma-sauce-launcher": "^0.2.10",
     "lodash": "1.2.1",
     "platform": "1.0.0",
