--- a/package.json
+++ b/package.json
@@ -43,10 +43,11 @@
     "karma-ievms": "0.1.0",
     "karma-jasmine": "^0.3.0",
     "karma-opera-launcher": "^0.1.0",
-    "karma-phantomjs2-launcher": "^0.3.2",
+    "karma-phantomjs-launcher": "^0.2.1",
     "karma-safari-launcher": "^0.1.1",
     "karma-sauce-launcher": "^0.2.10",
     "lodash": "1.2.1",
+    "phantomjs": "^1.9.18",
     "platform": "1.0.0",
     "through": "^2.3.6",
     "yargs": "^1.3.1"
