--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "docs": "http://chemerisuk.github.io/better-dom",
   "devDependencies": {
+    "es5-shim": "^4.5.2",
     "es6-module-transpiler": "^0.9.5",
     "gulp": "^3.8.8",
     "gulp-bump": "^0.1.11",
@@ -31,6 +32,7 @@
     "gulp-template": "^1.1.0",
     "gulp-uglify": "^1.0.2",
     "gulp-util": "^3.0.1",
+    "html5shiv": "^3.7.3",
     "jaguarjs-jsdoc": "git://github.com/chemerisuk/jaguarjs-jsdoc.git",
     "jasmine-core": "^2.3.4",
     "jshint-stylish": "^1.0.0",
