--- a/package.json
+++ b/package.json
@@ -10,13 +10,24 @@
   },
   "docs": "http://chemerisuk.github.io/better-dom",
   "devDependencies": {
+    "babel-plugin-check-es2015-constants": "^6.5.0",
+    "babel-plugin-transform-es2015-arrow-functions": "^6.5.2",
+    "babel-plugin-transform-es2015-block-scoped-functions": "^6.5.0",
+    "babel-plugin-transform-es2015-block-scoping": "^6.5.0",
+    "babel-plugin-transform-es2015-computed-properties": "^6.5.2",
+    "babel-plugin-transform-es2015-destructuring": "^6.5.0",
+    "babel-plugin-transform-es2015-literals": "^6.5.0",
+    "babel-plugin-transform-es2015-parameters": "^6.5.0",
+    "babel-plugin-transform-es2015-shorthand-properties": "^6.5.0",
+    "babel-plugin-transform-es2015-spread": "^6.5.2",
+    "babel-plugin-transform-es2015-template-literals": "^6.5.2",
     "es5-shim": "^4.5.2",
     "es6-module-transpiler": "^0.9.5",
     "gulp": "^3.8.8",
+    "gulp-babel": "^6.1.2",
     "gulp-bump": "^0.1.11",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.4.1",
-    "gulp-es6-transpiler": "^1.0.0",
     "gulp-filter": "^1.0.2",
     "gulp-gh-pages": "^0.3.4",
     "gulp-git": "^0.5.1",
