--- a/package.json
+++ b/package.json
@@ -55,10 +55,10 @@
     "karma-ievms": "0.1.0",
     "karma-jasmine": "^0.3.0",
     "karma-opera-launcher": "^0.1.0",
-    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-phantomjs-launcher": "^1.0.0",
     "karma-safari-launcher": "^0.1.1",
     "karma-sauce-launcher": "^0.2.10",
-    "phantomjs": "^1.9.18",
+    "phantomjs-prebuilt": "^2.1.4",
     "through": "^2.3.6",
     "yargs": "^1.3.1"
   },
