--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "es6-module-transpiler": "^0.9.5",
     "gulp": "^3.8.8",
     "gulp-babel": "^6.1.2",
+    "gulp-bump": "^2.1.0",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.4.1",
     "gulp-gh-pages": "^0.3.4",
