--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "Maksim Chemerisuk",
   "description": "Live extension playground",
   "license": "MIT",
+  "homepage": "https://github.com/chemerisuk/better-dom",
   "repository": {
     "type": "git",
     "url": "https://github.com/chemerisuk/better-dom"
@@ -43,8 +44,8 @@
     "gulp-replace": "^0.4.0",
     "gulp-symlink": "^1.1.0",
     "gulp-template": "^1.1.0",
-    "gulp-uglify": "^1.0.2",
     "gulp-util": "^3.0.1",
+    "gulp-uglify": "^1.5.3",
     "html5shiv": "^3.7.3",
     "jaguarjs-jsdoc": "git://github.com/chemerisuk/jaguarjs-jsdoc.git",
     "jasmine-core": "^2.3.4",
