--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "better-dom",
-  "version": "3.0.0-rc.1",
+  "version": "3.0.0",
   "main": [
     "dist/better-dom.js",
     "dist/better-dom-legacy.js",
