update babel config

--- a/package.json
+++ b/package.json
@@ -15,20 +15,11 @@
   ],
   "docs": "http://chemerisuk.github.io/better-dom",
   "devDependencies": {
-    "babel-plugin-check-es2015-constants": "^6.5.0",
-    "babel-plugin-transform-es2015-arrow-functions": "^6.5.2",
-    "babel-plugin-transform-es2015-block-scoped-functions": "^6.5.0",
-    "babel-plugin-transform-es2015-block-scoping": "^6.5.0",
-    "babel-plugin-transform-es2015-computed-properties": "^6.5.2",
-    "babel-plugin-transform-es2015-destructuring": "^6.5.0",
-    "babel-plugin-transform-es2015-literals": "^6.5.0",
-    "babel-plugin-transform-es2015-parameters": "^6.5.0",
-    "babel-plugin-transform-es2015-shorthand-properties": "^6.5.0",
-    "babel-plugin-transform-es2015-spread": "^6.5.2",
-    "babel-plugin-transform-es2015-template-literals": "^6.5.2",
+    "@babel/core": "^7.0.0-beta.49",
+    "@babel/preset-env": "^7.0.0-beta.49",
     "es6-module-transpiler": "^0.9.5",
     "gulp": "^3.8.8",
-    "gulp-babel": "^6.1.2",
+    "gulp-babel": "^8.0.0-beta.2",
     "gulp-bump": "^2.1.0",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.4.1",
