--- a/.babelrc
+++ b/.babelrc
@@ -1,19 +1,16 @@
 {
+    "retainLines": true,
+    "presets": [
+        ["@babel/env", {
+            "targets": {
+                browsers: ["ChromeAndroid 30", "iOS 7", "IE 10"]
+            },
+            "loose": true,
+            "modules": false
+        }]
+    ],
     "ignore": [
         "./bower_components/**/*.js",
         "./node_modules/**/*.js"
-    ],
-    "plugins": [
-        "check-es2015-constants",
-        "transform-es2015-arrow-functions",
-        "transform-es2015-block-scoped-functions",
-        "transform-es2015-block-scoping",
-        "transform-es2015-computed-properties",
-        "transform-es2015-destructuring",
-        "transform-es2015-literals",
-        "transform-es2015-parameters",
-        "transform-es2015-shorthand-properties",
-        "transform-es2015-spread",
-        "transform-es2015-template-literals"
     ]
 }
