--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "better-dom",
-  "version": "4.0.0-beta.3",
+  "version": "4.0.0-rc.0",
   "author": "Maksim Chemerisuk",
   "description": "Live extension playground",
   "license": "MIT",
